changing all user facing references of Bombay to PDQ

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Bombay Band Manager Client"
+      content="PDQ Band Manager Client"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <script src="https://kit.fontawesome.com/5b0aa2011e.js" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/static/manifest.json" />
-    <title>Bombay Client</title>
+    <title>PDQ Client</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
